Handle the queue menu not fitting vertically (bug 985996)

--- a/media/css/devreg/reviewers-mobile.styl
+++ b/media/css/devreg/reviewers-mobile.styl
@@ -515,6 +515,9 @@ $mobileborder = #d7d2c3;
 
 @media $mobile-portrait-overlay {
     #queue-tab-overlay > menu.nav-action-menu {
+        top: 5.5rem;
+        overflow: scroll;
+
         > div {
             max-height: 225px;
             overflow: auto;
